refactor in multiple classes